--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,12 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-  "packageRules": [
-    {
-      "matchPackagePatterns": ["^@rectangular-labs/"],
-      "enabled": false
-    }
-  ],
+  "packageRules": [],
   "updateInternalDeps": true,
   "rangeStrategy": "bump",
   "automerge": true
