--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "typescript": "^5.6.3",
+    "unenv": "^1.10.0",
     "vite-tsconfig-paths": "^5.1.2"
   }
 }
