--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
 name = "scalene-lab"
+pages_build_output_dir = "./dist"
 compatibility_date = "2024-11-16"
 compatibility_flags = ["nodejs_compat"]
-main = "./dist/worker/index.js"
