--- a/package.json
+++ b/package.json
@@ -5,24 +5,42 @@
   "author": "Winston Yeo",
   "type": "module",
   "scripts": {
+    "dev": "vinxi dev --port 5432",
     "build": "vinxi build",
-    "dev": "vinxi dev",
-    "format": "bunx @biomejs/biome format . --write",
+    "start": "vinxi start",
     "lint": "bunx @biomejs/biome lint . --write",
-    "start": "vinxi start"
+    "format": "bunx @biomejs/biome format . --write"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
     "@tanstack/react-router": "^1.81.14",
-    "@tanstack/start": "^1.81.15",
+    "@tanstack/react-router-with-query": "^1.81.14",
+    "@tanstack/router-devtools": "^1.81.14",
+    "@tanstack/start": "^1.81.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1",
     "vinxi": "^0.4.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@dotenvx/dotenvx": "^1.24.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
     "unenv": "^1.10.0",
     "vite-tsconfig-paths": "^5.1.2"
